apps/media/ingest/qbittorrent/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui-prod-media-svc
spec:
  selector:
    app: qui-deployment
  ports:
    - port: 7476
      targetPort: http
      name: http
      protocol: TCP
