apps/media/ingest/qbittorrent/qui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-prod-media-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qui.home.arpa
      secretName: home-arpa-tls
  rules:
    - host: "qui.home.arpa"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qui-prod-media-svc
                port:
                  number: 7476
